<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="30dp"
    android:layout_marginVertical="60dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_dialog_bg"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp">

                <TextView
                    android:id="@+id/tv_0"
                    style="@style/robboto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:autoSizeMinTextSize="13sp"
                    android:text="@string/text0"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/algereya_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-8dp"
                    android:layout_marginEnd="8dp"
                    android:text="1"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/tv1"
                    app:layout_constraintTop_toTopOf="@id/tv1" />

                <TextView
                    android:id="@+id/tv1"
                    style="@style/robboto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="If you did go over the 30 days without payment you will need to make payment to continue using our service. "
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_0" />


                <TextView
                    style="@style/algereya_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-8dp"
                    android:layout_marginEnd="8dp"
                    android:text="2"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/tv2"
                    app:layout_constraintTop_toTopOf="@id/tv2" />


                <TextView
                    android:id="@+id/tv2"
                    style="@style/robboto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/text2"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv1" />


                <TextView
                    style="@style/algereya_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-8dp"
                    android:layout_marginEnd="8dp"
                    android:text="3"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/tv3"
                    app:layout_constraintTop_toTopOf="@id/tv3" />


                <TextView
                    android:id="@+id/tv3"
                    style="@style/robboto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/tv3"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv2" />


                <TextView
                    style="@style/algereya_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-8dp"
                    android:layout_marginEnd="8dp"
                    android:text="4"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/tv4"
                    app:layout_constraintTop_toTopOf="@id/tv4" />

                <TextView
                    android:id="@+id/tv4"
                    style="@style/robboto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/text4"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv3" />


                <TextView
                    style="@style/algereya_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-8dp"
                    android:layout_marginEnd="8dp"
                    android:text="5"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/tv5"
                    app:layout_constraintTop_toTopOf="@id/tv5" />

                <TextView
                    android:id="@+id/tv5"
                    style="@style/robboto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/text5"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv4" />


                <TextView
                    android:id="@+id/tv_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="30dp"
                    android:foreground="?selectableItemBackground"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="5dp"
                    style="@style/algereya_medium"
                    android:text="DONE"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv5" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>